tests/baselines/reference/parserArrowFunctionExpression11(target=es3).errors.txt
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(1,1): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(1,5): error TS2304: Cannot find name 'b'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(1,9): error TS2304: Cannot find name 'c'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(1,19): error TS2304: Cannot find name 'e'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(1,19): error TS8010: Type annotations can only be used in TypeScript files.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(1,24): error TS2304: Cannot find name 'f'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(2,1): error TS1005: ':' expected.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts(1,1): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts(1,5): error TS2304: Cannot find name 'b'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts(1,9): error TS2304: Cannot find name 'c'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts(1,19): error TS2304: Cannot find name 'e'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts(1,24): error TS2304: Cannot find name 'f'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts(2,1): error TS1005: ':' expected.


==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js (7 errors) ====
    a ? b ? c : (d) : e => f // Legal JS
    ~
!!! error TS2304: Cannot find name 'a'.
        ~
!!! error TS2304: Cannot find name 'b'.
            ~
!!! error TS2304: Cannot find name 'c'.
                      ~
!!! error TS2304: Cannot find name 'e'.
                      ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                           ~
!!! error TS2304: Cannot find name 'f'.
    
    
!!! error TS1005: ':' expected.
==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts (6 errors) ====
    a ? b ? c : (d) : e => f
    ~
!!! error TS2304: Cannot find name 'a'.
        ~
!!! error TS2304: Cannot find name 'b'.
            ~
!!! error TS2304: Cannot find name 'c'.
                      ~
!!! error TS2304: Cannot find name 'e'.
                           ~
!!! error TS2304: Cannot find name 'f'.
    
    
!!! error TS1005: ':' expected.